# intelligent-biostats

./: .cursor-config.json  .gitignore  CONTRIBUTING.md  CURSOR_RULES.md  LICENSE  README.md  TODO.md  analysis_history.db  installer.nsi  intelligent_biostats.spec  launcher.py  pyproject.toml  requirements.txt  run.py  setup-cursor.sh  setup.cfg  setup.py  startup.py  update_site.sh  windows_build.spec  windows_launcher.py
.cursor/rules/: library-and-route-awareness.mdc  ui-formatting-rules.mdc
.github/workflows/: validate-cursor-rules.yml
app/: __init__.py  routes.py
app/api/: routes.py
app/api/routes/: __init__.py
app/api/routes/ai/: routes.py
app/api/routes/analysis/: routes.py
app/api/routes/data/: routes.py
app/config/: settings.py
app/core/: __init__.py  ai_engine.py  data_manager.py  database.py  enums.py  stats_engine.py  validation_engine.py
app/frontend/static/css/: main.css  modals.css  styles.css
app/frontend/static/js/: main.js  recommendations.js  script.js
app/frontend/templates/: index.html
app/routes/: data_routes.py
app/utils/: column_selector.py  debug_utils.py  error_handling.py  helpers.py  performance_monitor.py  request_tracking.py  route_docs.py  state_logger.py
config/: settings.py
data/: analysis_history.db
debug_logs/: state_log.jsonl
docs/: DEVELOPMENT.md
docs/api/: README.md
docs/user_guides/: getting_started.md
scripts/: start.sh
tests/: test_data_manager.py
tests/data/: high_school_students.csv
tests/data/Generate Test Data/: generate_student_test_data.py
tools/: view_state.py
